--- a/checkout/index.html
+++ b/checkout/index.html
@@ -48,20 +48,20 @@
     <div>
       <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="shipping-tab" data-bs-toggle="tab" data-bs-target="#shipping" type="button" role="tab" aria-controls="shipping" aria-selected="true">Shipping</button>
+          <button class="nav-link active" id="shipping-tab" data-bs-toggle="tab" data-bs-target="#nav-shipping" type="button" role="tab" aria-controls="shipping" aria-selected="true">Shipping</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="payment-tab" data-bs-toggle="tab" data-bs-target="#payment" type="button" role="tab" aria-controls="payment" aria-selected="false">Payment</button>
+          <button class="nav-link" id="payment-tab" data-bs-toggle="tab" data-bs-target="#nav-payment" type="button" role="tab" aria-controls="payment" aria-selected="false">Payment</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="confirmation-tab" data-bs-toggle="tab" data-bs-target="#confirmation" type="button" role="tab" aria-controls="confirmation" aria-selected="false">Confirmation</button>
+          <button class="nav-link" id="confirmation-tab" data-bs-toggle="tab" data-bs-target="#nav-confirmation" type="button" role="tab" aria-controls="confirmation" aria-selected="false">Confirmation</button>
         </li>
       </ul>
     </div>
 
     <div class="tab-content" id="nav-tabContent">
       <form class="needs-validation" novalidate>
-        <div class="tab-pane fade show active" id="nav-shipping" role="tabpanel" aria-labelledby="nav-shipping-tab">
+        <div class="tab-pane fade show active" id="nav-shipping" role="tabpanel" aria-labelledby="shipping-tab">
           <div class="col-md-7 col-lg-8">
             <h4 class="mb-3">Billing address</h4>
               <div class="row g-3">
@@ -159,7 +159,7 @@
               <hr class="my-4">
           </div>
         </div>
-        <div class="tab-pane fade" id="nav-payment" role="tabpanel" aria-labelledby="nav-payment-tab">
+        <div class="tab-pane fade" id="nav-payment" role="tabpanel" aria-labelledby="payment-tab">
           <div class="col-md-7 col-lg-8">
             <h4 class="mb-3">Payment</h4>
             <div class="my-3">
@@ -218,7 +218,7 @@
           </div>
         </div>
       </form>
-      <div class="tab-pane fade" id="nav-confirmation" role="tabpanel" aria-labelledby="nav-confirmation-tab">
+      <div class="tab-pane fade" id="nav-confirmation" role="tabpanel" aria-labelledby="confirmation-tab">
         <div class="col-md-7 col-lg-8">
           <div class="col-md-5 col-lg-4 order-md-last">
             <h4 class="d-flex justify-content-between align-items-center mb-3">
